--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -42,6 +42,7 @@ const { title, description } = Astro.props;
       }}
     />
     {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
+	<script is:inline src="/js/ios-pwa-splash.min.js"></script>
   </head>
   <body>
     <div class="stack">
@@ -136,5 +137,6 @@ const { title, description } = Astro.props;
 		pwaInstall.addEventListener('pwa-install-how-to-event', (event) => {logMessage(event.detail.message)});
 		pwaInstall.addEventListener('pwa-install-gallery-event', (event) => {logMessage(event.detail.message)});
 	</script>
+	<script>iosPWASplash('/pwa-512x512.png');</script>
   </body>
 </html>
