--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const currentYear = new Date().getFullYear();
 
 <footer>
 	<div class="group">
-		<p>&copy; {currentYear} Mandolin Balaji</p>
+		<p>&copy; {currentYear} Mandolin Balaji. All rights reserved.</p>
 	</div>
 </footer>
 <style>
