--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -60,7 +60,7 @@ import Icon from './Icon.astro';
 		}
 
 		.skills h2 {
-			font-size: var(--text-xl);
+			font-size: var(--text-2xl);
 		}
 	}
 </style>
