--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -36,6 +36,7 @@ const { title, description } = Astro.props;
         ],
         meta: [
           { name: "mobile-web-app-capable", content: "yes" },
+		  { name: "apple-mobile-web-app-capable", content: "yes" },
           { name: "apple-mobile-web-app-status-bar-style", content: "black-translucent" },
           { name: "apple-mobile-web-app-title", content: "Mandolin Balaji" }
         ]
@@ -52,6 +53,7 @@ const { title, description } = Astro.props;
       <Footer />
     </div>
     <script>
+	  iosPWASplash('/pwa-512x512.png');
       addEventListener('load', () => document.documentElement.classList.add('loaded'));
     </script>
     <ReloadPrompt />
@@ -137,6 +139,5 @@ const { title, description } = Astro.props;
 		pwaInstall.addEventListener('pwa-install-how-to-event', (event) => {logMessage(event.detail.message)});
 		pwaInstall.addEventListener('pwa-install-gallery-event', (event) => {logMessage(event.detail.message)});
 	</script>
-	<script>iosPWASplash('/pwa-512x512.png');</script>
   </body>
 </html>
