ui improvements to notes

--- a/src/pages/notes/[...slug].astro
+++ b/src/pages/notes/[...slug].astro
@@ -102,6 +102,7 @@ const { Content } = await render(entry);
 
   .description {
     font-size: var(--text-lg);
+    text-align: left;
   }
 
   .content {
