--- a/src/pages/notes.astro
+++ b/src/pages/notes.astro
@@ -228,7 +228,19 @@ const serializedNotes = JSON.stringify(allNotes.map(note => ({
           <a href="/notes/${note.id}" class="note-link">
             <div class="note-content">
               <h3 class="note-title">${note.title}</h3>
-              <p class="note-description">${note.description.replace(/(\w+)~(\w+)~/g, '$1<sub>$2</sub>')}</p>
+              <p class="note-description">
+                ${note.description
+                  .split('\n')
+                  .map(line => {
+                    if (line.includes(':')) {
+                      const [label, content] = line.split(':', 2);
+                      return `<strong>${label}:</strong> ${content.replace(/(\w+)~(\w+)~/g, '$1<sub>$2</sub>')}`;
+                    } else {
+                      return line.replace(/(\w+)~(\w+)~/g, '$1<sub>$2</sub>');
+                    }
+                  })
+                  .join('<br>')}
+              </p>
               <div class="note-meta">
                 <div class="note-tags">
                   ${note.tags.map(tag => `<span class="note-tag">${tag}</span>`).join('')}
